<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_name"
        android:textAppearance="@android:style/TextAppearance.Large"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/firstName"
            android:inputType="text" />


        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/lastName"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:text="@string/Title1"
            android:textAppearance="@android:style/TextAppearance.Medium" />


        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="177.5dp"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextText5"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/ID"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextText7"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/school"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextText8"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextText9"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/phoneNo"
            android:inputType="text" />

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <View
            android:id="@+id/divider3"
            android:layout_width="80dp"
            android:layout_height="49dp"
            android:layout_weight="4"
            android:backgroundTint="@color/white"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:layout_weight="1"
            android:text="@string/register"
            app:cornerRadius="15px" />
        <View
            android:id="@+id/divider4"
            android:layout_width="80dp"
            android:layout_height="49dp"
            android:layout_weight="4"
            android:backgroundTint="@color/white"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

</LinearLayout>
